@@ -2,6 +2,9 @@
   Changes with Apache Traffic Server 3.3.2
 
 
+  *) [TS-1724] Add tool to compare records.config files to contrib
+   Author: Mark Harrison <mark@mivok.net>
+
   *) [TS-1566] dynamic update for string vars does not work
    Author: Aidan McGurn <aidan.mcgurn@openwave.com>
 
